--- a/src/openapi/components/schemas/ctf.yaml
+++ b/src/openapi/components/schemas/ctf.yaml
@@ -3,6 +3,6 @@ properties:
   token:
     type: string
     readOnly: false
-    example: "FGSTLBGXM3YB7USWS28KE2JV9Z267L48"
-    minimum: 32
-    maximum: 32
+    example: "#FGSTLBGXM3YB7USWS28KE2JV9Z267L48"
+    minimum: 8
+    maximum: 64
