--- a/src/openapi/paths/ctf.yaml
+++ b/src/openapi/paths/ctf.yaml
@@ -13,6 +13,7 @@ post:
   responses:
     "200":
       description: CTF token accepted!
+      $ref: "../components/responses/200PostCtfResults.yaml"
     "400":
       $ref: "../components/responses/400ClientError.yaml"
     "401":
